--- a/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
@@ -24,6 +24,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/InterpretBank;component/Styles/SettingsResources.xaml" />
+                <ResourceDictionary Source="/InterpretBank;component/Styles/General.xaml" />
                 <ResourceDictionary Source="../Styles/SettingsMainResources.xaml" />
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/comboboxresources.xaml" />
@@ -44,7 +45,7 @@
         </Grid.RowDefinitions>
         <Image Grid.Row="0"
                Height="50"
-               Source="../../Resources/logo.png" />
+               Source="/InterpretBank;component/Resources/logo.png" />
         <DockPanel Grid.Row="1"
                    HorizontalAlignment="Stretch"
                    Margin="10 10 10 5"
@@ -70,35 +71,84 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <DockPanel LastChildFill="False"
+                    <!--<DockPanel LastChildFill="False"
                                Grid.Column="0"
                                Grid.ColumnSpan="2"
                                Grid.Row="0"
                                DockPanel.Dock="Left">
-                        <TextBox x:Name="ValueHolder"
-                                 Visibility="Collapsed" />
-                        <TextBlock Text="Type in a new glossary name then press enter:"
+                        -->
+                    <!--<TextBox x:Name="ValueHolder"
+                                 Visibility="Collapsed" />-->
+                    <!--<TextBlock Text="Type in a new glossary name then press enter:"
                                    Margin="0 5 0 1"
-                                   DockPanel.Dock="Top" />
-                        <TextBox DockPanel.Dock="Top"
-                                 Margin="0 0 0 5"
-                                 PreviewKeyDown="UIElement_OnKeyDown">
-                            <TextBox.InputBindings>
-                                <KeyBinding Key="Enter"
-                                            Command="{Binding EnterGlossaryCommand}"
-                                            CommandParameter="{Binding Text, ElementName=ValueHolder}" />
-                            </TextBox.InputBindings>
-                        </TextBox>
-                    </DockPanel>
+                                   DockPanel.Dock="Top" />-->
+                    <!--<TextBox DockPanel.Dock="Top"
+                                     Margin="0 0 0 5"
+                                     PreviewKeyDown="UIElement_OnKeyDown">
+                                <TextBox.InputBindings>
+                                    <KeyBinding Key="Enter"
+                                                Command="{Binding EnterGlossaryCommand}"
+                                                CommandParameter="{Binding Text, ElementName=ValueHolder}" />
+                                </TextBox.InputBindings>
+                            </TextBox>-->
+                    <!--
+                    </DockPanel>-->
+
+                    <Border Grid.Row="0"
+                            Margin="0"
+                            Grid.ColumnSpan="2"
+                            Background="LightGray"
+                            Grid.Column="0">
+                        <StackPanel Orientation="Horizontal">
+                            <Button FontSize="20"
+                                    Cursor="Hand"
+                                    HorizontalContentAlignment="Left"
+                                    FontWeight="Bold"
+                                    BorderThickness="0"
+                                    HorizontalAlignment="Left"
+                                    ToolTip="{x:Static interpretBank:PluginResources.ImportEntriesIntoSelectedGlossary}"
+                                    x:Name="Import_Button"
+                                    DockPanel.Dock="Left"
+                                    Visibility="{Binding Filepath, Converter={StaticResource NullToVisibilityConverter}}"
+                                    Style="{StaticResource Sdl.Button.EmmbeddedAddButtonStyle}"
+                                    Click="ImportButton_Click"
+                                    Command="{Binding ImportIntoSelectedGlossaryCommand}">
+                                <DockPanel HorizontalAlignment="Left">
+                                    <Image DockPanel.Dock="Left"
+                                           VerticalAlignment="Bottom"
+                                           Source="/InterpretBank;component/Resources/Browse2.png"
+                                           Height="16" />
+                                    <!--<TextBlock Text="{x:Static interpretBank:PluginResources.ImportEntries}"
+                                           FontSize="10"
+                                           Margin="5 0 0 0"
+                                           DockPanel.Dock="Right"
+                                           VerticalAlignment="Center" />-->
+                                </DockPanel>
+                            </Button>
+                            <Button BorderThickness="0"
+                                    ToolTip="{x:Static interpretBank:PluginResources.Tooltip_AddNewGlossary}"
+                                    Command="{Binding EnterGlossaryCommand}"
+                                    Cursor="Hand"
+                                    Style="{StaticResource Sdl.Button.EmmbeddedAddButtonStyle}">
+                                <Image Source="/InterpretBank;component/Resources/Add.png"
+                                       Height="16" />
+                            </Button>
+                        </StackPanel>
+                    </Border>
+
+
 
                     <ListBox DockPanel.Dock="Top"
                              Grid.Column="0"
+                             AutomationProperties.Name="Glossaries"
                              Grid.Row="1"
                              x:Name="GlossaryList"
                              ItemsSource="{Binding Glossaries}"
@@ -112,6 +162,7 @@
                                             Command="{Binding DataContext.DeleteGlossaryCommand, ElementName=GlossaryManager_Window}"
                                             DockPanel.Dock="Left"
                                             FontSize="8"
+                                            AutomationProperties.Name="DeleteGlossary"
                                             Style="{StaticResource Sdl.Button.EmbeddedStyle}"
                                             Content="✖">
 
@@ -171,7 +222,10 @@
                                                      SelectedItemTemplate="{StaticResource TagTemplate}" />
                         </DockPanel>
                     </Grid>
+
+
                 </Grid>
+
             </TabItem>
 
             <!--Tags tab-->
@@ -191,10 +245,10 @@
                                Grid.Row="0"
                                Grid.Column="0"
                                Grid.ColumnSpan="2">
-                        <TextBlock Text="Type in a new tag then press enter:"
+                        <!--<TextBlock Text="Type in a new tag then press enter:"
                                    Margin="0 5 0 1"
-                                   DockPanel.Dock="Top" />
-                        <TextBox DockPanel.Dock="Top"
+                                   DockPanel.Dock="Top" />-->
+                        <!--<TextBox DockPanel.Dock="Top"
                                  Margin="0 0 0 5"
                                  PreviewKeyDown="UIElement_OnKeyDown">
                             <TextBox.InputBindings>
@@ -202,11 +256,12 @@
                                             Command="{Binding EnterTagCommand}"
                                             CommandParameter="{Binding Text, ElementName=ValueHolder}" />
                             </TextBox.InputBindings>
-                        </TextBox>
+                        </TextBox>-->
                     </DockPanel>
 
                     <ListBox DockPanel.Dock="Top"
                              Grid.Row="1"
+                             AutomationProperties.Name="Tags"
                              x:Name="TagsList"
                              Grid.Column="0"
                              ItemsSource="{Binding Tags}"
@@ -219,6 +274,7 @@
                                     <Button Command="{Binding DataContext.DeleteTagCommand, RelativeSource={RelativeSource AncestorType=ListBox}}"
                                             CommandParameter="{Binding TagName}"
                                             VerticalAlignment="Bottom"
+                                            AutomationProperties.Name="DeleteTag"
                                             DockPanel.Dock="Left"
                                             FontSize="8"
                                             Style="{StaticResource Sdl.Button.EmbeddedStyle}"
@@ -273,6 +329,7 @@
                                                 FontSize="15"
                                                 Command="{Binding RestoreCommand}"
                                                 Background="Transparent"
+                                                AutomationProperties.Name="Restore"
                                                 HorizontalAlignment="Left"
                                                 BorderBrush="Transparent"
                                                 Style="{StaticResource ClearTextButtonStyle}" />
@@ -296,28 +353,6 @@
                    VerticalAlignment="Bottom"
                    LastChildFill="False">
 
-            <Button FontSize="20"
-                    FontWeight="Bold"
-                    ToolTip="{x:Static interpretBank:PluginResources.ImportEntriesIntoSelectedGlossary}"
-                    x:Name="Import_Button"
-                    DockPanel.Dock="Left"
-                    Visibility="{Binding Filepath, Converter={StaticResource NullToVisibilityConverter}}"
-                    Style="{StaticResource Sdl.Button.EmbeddedStyle}"
-                    Click="ImportButton_Click"
-                    Command="{Binding ImportIntoSelectedGlossaryCommand}"
-                    Margin="10 0 10 10">
-                <DockPanel>
-                    <Image DockPanel.Dock="Left"
-                           VerticalAlignment="Bottom"
-                           Source="/InterpretBank;component/Resources/Browse2.png"
-                           Height="15" />
-                    <TextBlock Text="{x:Static interpretBank:PluginResources.ImportEntries}"
-                               FontSize="10"
-                               Margin="5 0 0 0"
-                               DockPanel.Dock="Right"
-                               VerticalAlignment="Center"/>
-                </DockPanel>
-            </Button>
 
             <Button Content="Cancel"
                     Cursor="Hand"
