--- a/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
@@ -28,43 +28,54 @@
     <DockPanel>
         <WrapPanel DockPanel.Dock="Top"
                    ToolTip="{x:Static interpretBank:PluginResources.ToolTip_LocateInterpretBankDatabase}">
+            <Border BorderBrush="DarkGray"
+                    BorderThickness="0.5"
+                    Height="26">
 
-            <ComboBox Height="25"
-                      IsEditable="True"
-                      x:Name="FilepathCombobox"
-                      Text="Select file path..."
-                      SelectionChanged="FilepathCombobox_OnSelectionChanged"
-                      IsReadOnly="False"
-                      MinWidth="50"
-                      SelectedItem="{Binding Filepath, ElementName=Root, UpdateSourceTrigger=PropertyChanged}"
-                      Style="{StaticResource Sdl.ComboBox.Generic.Style}"
-                      ItemsSource="{Binding DatabaseList.List, ElementName=Root}">
+                <StackPanel Orientation="Horizontal">
+                    <ComboBox Height="25"
+                              IsEditable="True"
+                              x:Name="FilepathCombobox"
+                              BorderThickness="0"
+                              VerticalContentAlignment="Center"
+                              AutomationProperties.AutomationId="{Binding Filepath, ElementName=Root}"
+                              Text="Select file path..."
+                              SelectionChanged="FilepathCombobox_OnSelectionChanged"
+                              IsReadOnly="False"
+                              MinWidth="50"
+                              SelectedItem="{Binding Filepath, ElementName=Root, UpdateSourceTrigger=PropertyChanged}"
+                              Style="{StaticResource Sdl.ComboBox.Generic.Style}"
+                              ItemsSource="{Binding DatabaseList.List, ElementName=Root}">
 
-            </ComboBox>
+                    </ComboBox>
 
-            <Button Style="{StaticResource Sdl.Button.EmbeddedStyle}"
-                    x:Name="BrowseButton"
-                    Click="BrowseButton_OnClick"
-                    Height="30"
-                    Background="Transparent"
-                    Content="📂"
-                    BorderBrush="Transparent"
-                    FontSize="15"
-                    DockPanel.Dock="Right"
-                    HorizontalAlignment="Right"
-                    Margin="5 5 2 5" >
-            </Button>
+                    <Button Style="{StaticResource Sdl.Button.EmbeddedStyle}"
+                            x:Name="BrowseButton"
+                            Click="BrowseButton_OnClick"
+                            Cursor="Hand"
+                            Height="30"
+                            Background="Transparent"
+                            Content="📂"
+                            VerticalAlignment="Center"
+                            BorderBrush="Transparent"
+                            FontSize="15"
+                            DockPanel.Dock="Right"
+                            HorizontalAlignment="Right"
+                            Margin="5 5 2 5">
+                    </Button>
+                </StackPanel>
 
+            </Border>
+            <StackPanel Orientation="Horizontal"
+                        Margin="5 0 0 0">
+                <TextBlock Text="See "
+                           DockPanel.Dock="Bottom" />
+                <Button Content="documentation"
+                        Style="{StaticResource Sdl.Button.HyperLinkStyle}"
+                        Click="DocumentationButton_OnClick"
+                        Margin="0 1.2 0 0" />
+                <TextBlock Text=" for further guidance" />
+            </StackPanel>
         </WrapPanel>
-        <StackPanel Orientation="Horizontal"
-                    Margin="5 0 0 0">
-            <TextBlock Text="See "
-                       DockPanel.Dock="Bottom" />
-            <Button Content="documentation"
-                    Style="{StaticResource Sdl.Button.HyperLinkStyle}"
-                    Click="DocumentationButton_OnClick"
-                    Margin="0 1.2 0 0" />
-            <TextBlock Text=" for further guidance" />
-        </StackPanel>
     </DockPanel>
 </UserControl>
