--- a/InterpretBank/InterpretBank/Styles/General.xaml
+++ b/InterpretBank/InterpretBank/Styles/General.xaml
@@ -1,7 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-	<SolidColorBrush x:Key="SdlPrimaryButton.Background" Color="#FF25BD59"/>
+    <Style TargetType="Image">
+        <Setter Property="RenderOptions.BitmapScalingMode"
+                Value="HighQuality" />
+    </Style>
+
+    <SolidColorBrush x:Key="SdlPrimaryButton.Background" Color="#FF25BD59"/>
 	<SolidColorBrush x:Key="SdlPrimaryButton.Border" Color="#FF2CA754"/>
 	<SolidColorBrush x:Key="SdlPrimaryButton.Foreground" Color="White"/>
 	<SolidColorBrush x:Key="SdlPrimaryButton.MouseOver.Background" Color="#FF2CA754"/>
