TermbaseViewer: don't reload termbase when DB edited in Configurator, if the edited termbase not the same as the one loaded in TermbaseViewer Fix deleting glossaries

--- a/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
@@ -27,6 +27,7 @@
     </UserControl.Resources>
     <DockPanel>
         <WrapPanel DockPanel.Dock="Top"
+                   Orientation="Vertical"
                    ToolTip="{x:Static interpretBank:PluginResources.ToolTip_LocateInterpretBankDatabase}">
             <Border BorderBrush="DarkGray"
                     BorderThickness="0.5"
