--- a/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
@@ -363,7 +363,7 @@
                     DockPanel.Dock="Right"
                     Margin="0 0 10 10" />
 
-            <Button Content="Apply"
+            <Button Content="OK"
                     Cursor="Hand"
                     Click="ApplyButton_Click"
                     Command="{Binding SaveCommand}"
