--- a/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
+++ b/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
@@ -89,10 +89,10 @@
                            x:Name="FilepathLabel"
                            DockPanel.Dock="Top" />
                 <controls1:ChooseFilepathControl DockPanel.Dock="Top"
-                                                Margin="0 5 0 0"
-                                                AutomationProperties.LabeledBy="{Binding ElementName=FilepathLabel}"
-                                                Filepath="{Binding Filepath, Mode=TwoWay}"
-                                                VerticalContentAlignment="Top" />
+                                                 Margin="0 5 0 0"
+                                                 AutomationProperties.LabeledBy="{Binding ElementName=FilepathLabel}"
+                                                 Filepath="{Binding Filepath, Mode=TwoWay}"
+                                                 VerticalContentAlignment="Top" />
 
                 <!--<TextBlock Text="Settings" DockPanel.Dock="Top" FontSize="15" Margin="0 0 0 20" Foreground="DarkCyan" />-->
 
@@ -150,14 +150,17 @@
                    LastChildFill="False"
                    x:Name="TermSearchPanel">
 
-            <TextBlock Name="ShowHideSettingsLabel" Width="0"> 
+            <TextBlock Name="ShowHideSettingsLabel"
+                       Width="0">
                 <TextBlock.Style>
-                    <Style TargetType="TextBlock" >
+                    <Style TargetType="TextBlock">
                         <Setter Property="Text"
                                 Value="Hide settings" />
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding IsChecked, ElementName=SettingsToggleButton, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Value="True">
-                                <Setter Property="Text" Value="Show settings"/>
+                            <DataTrigger Binding="{Binding IsChecked, ElementName=SettingsToggleButton, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                         Value="True">
+                                <Setter Property="Text"
+                                        Value="Show settings" />
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -178,7 +181,7 @@
                            BasedOn="{StaticResource GlyphToggleButtonStyle}">
                         <Setter Property="Content"
                                 Value="←" />
-                        
+
                         <Style.Triggers>
                             <Trigger Property="IsChecked"
                                      Value="True">
@@ -200,7 +203,7 @@
 
             <DataGrid x:Name="TermsGrid"
                       d:ItemsSource="{d:SampleData ItemCount=5}"
-                      ItemsSource="{Binding Entries}"
+                      ItemsSource="{Binding Entries.Result}"
                       IsReadOnly="True"
                       CanUserReorderColumns="True"
                       BorderThickness="0.7 0.55 0 0"
